2008-07-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/localegen/PropertiesGenerator.java,
	Replace v in time patterns with z, as the Java
	specification doesn't include v.
	
2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/supplementgen/Main.java:
	(Info): Renamed from ZoneInfo.
	(SupplementalHandler.startElement(String,String,String,Attributes)):
	Capture first day data as well as minimum days in week.
	
2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/supplementgen/Main.java:
	Add support for generating metazones.properties.
	(CurrencyInfo.equals(Object)): Implemented.
	(CurrencyInfo.hashCode()): Likewise.
	(ZoneInfo): New class to act as a key for zone info.
	(SupplementalHandler.SupplementalHandler(PrintWriter,PrintWriter,PrintWriter)):
	Add new print writer for metazones.properties.
	(SupplementalHandler.endElement(String,String,String)):
	Output zone data.
	(SupplementalHandler.startDocument()): Add header for metazones.properties.
	(SupplementalHandler.startElement(String,String,String,Attributes)):
	Collect zone data.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Replace currencygen with supplementgen.
	* bin/currencygen.in: Renamed to...
	* bin/supplementgen.in: ...this.
	* configure.ac: Replace currencygen with supplementgen.
	* src/gnu/currencygen/Main.java: Renamed to...
	* src/gnu/supplementgen/Main.java: ...this and
	updated version/copyright output.

2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* src/gnu/currencygen/Main.java:
	Output week data to weeks.properties.
	(SupplementalHandler.SupplementalHandler(PrintWriter,PrintWriter)):
	Add new print writer for weeks.properties.
	(SupplementalHandler.endElement(String,String,String)):
	Output week data.
	(SupplementalHandler.startDocument()): Add header for weeks.properties.
	(SupplementalHandler.startElement(String,String,String,Attributes)):
	Collect week data.
	