@@ -1,3 +1,9 @@
+2011-09-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* INSTALL: Remove autogenerated file.
+	* autogen.sh: Update to allow libtool 2.*.
+	* configure.ac: Set m4 as macro directory.
+
 2008-07-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* src/gnu/localegen/PropertiesGenerator.java,
